--- a/LensesCalculation.ipynb
+++ b/LensesCalculation.ipynb
@@ -110,15 +110,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using several spheres of unique size plus considering the cellphone lens"
+    "## Using several spheres of unique size and considering the cellphone lens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of spheres required is: 1.002004008016032\n",
+      "The distance between the combined system of spheres and the thin lens is: -0.004008658702798043\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_lens_system_parameters(sphere_radius, f2, magnification):\n",
+    "    magnification = abs(magnification)  # Ensure magnification is positive\n",
+    "\n",
+    "    # Calculate the effective focal length of the combined system\n",
+    "    effective_focal_length = 2 * sphere_radius / (magnification - 1)\n",
+    "\n",
+    "    # Calculate the number of spheres required\n",
+    "    num_spheres = magnification / (magnification - 1)\n",
+    "\n",
+    "    # Calculate the distance between the combined system of spheres and the thin lens\n",
+    "    d = (effective_focal_length * f2) / (effective_focal_length - f2)\n",
+    "\n",
+    "    return num_spheres, d\n",
+    "\n",
+    "# Example usage\n",
+    "sphere_radius = float(input(\"Enter the radius of the sphere: \"))\n",
+    "f2 = float(input(\"Enter the focal length of the thin lens: \"))\n",
+    "magnification = float(input(\"Enter the desired magnification: \"))\n",
+    "\n",
+    "num_spheres, d = calculate_lens_system_parameters(sphere_radius, f2, magnification)\n",
+    "print(\"The number of spheres required is:\", num_spheres)\n",
+    "print(\"The distance between the combined system of spheres and the thin lens is:\", d)"
+   ]
   }
  ],
  "metadata": {
