Update Lenses Calculation

--- a/LensesCalculation.ipynb
+++ b/LensesCalculation.ipynb
@@ -18,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The radius of the sphere should be: 0.0010005002501250625\n",
+      "The distance between the sphere and the thin lens should be: 2.001000500250125\n"
+     ]
+    }
+   ],
    "source": [
     "def calculate_lens_parameters(magnification, f2):\n",
     "    magnification = abs(magnification)  # Ensure magnification is positive\n",
@@ -81,9 +90,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of spheres required is: 1.0005002501250626\n",
+      "The effective focal length of the combined system is: 0.0010005002501250625\n"
+     ]
+    }
+   ],
    "source": [
     "def calculate_number_of_spheres(magnification, sphere_radius):\n",
     "    magnification = abs(magnification)  # Ensure magnification is positive\n",
@@ -115,15 +133,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of spheres required is: 1.002004008016032\n",
-      "The distance between the combined system of spheres and the thin lens is: -0.004008658702798043\n"
+      "The number of spheres required is: 1.0101010101010102\n",
+      "The distance between the combined system of spheres and the thin lens is: -0.020408163265306124\n"
      ]
     }
    ],
@@ -151,6 +169,110 @@
     "print(\"The number of spheres required is:\", num_spheres)\n",
     "print(\"The distance between the combined system of spheres and the thin lens is:\", d)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Focal length of a sphere"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The focal length of the spherical lens is: -0.7096774193548387\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_focal_length(radius, refractive_index):\n",
+    "    # Calculate the focal length of the spherical lens\n",
+    "    focal_length = (refractive_index - 1) / (refractive_index * (1 / radius - 1))\n",
+    "\n",
+    "    return focal_length\n",
+    "\n",
+    "# Example usage\n",
+    "radius = float(input(\"Enter the radius of the spherical lens: \"))\n",
+    "refractive_index = float(input(\"Enter the refractive index of the material: \"))\n",
+    "\n",
+    "focal_length = calculate_focal_length(radius, refractive_index)\n",
+    "print(\"The focal length of the spherical lens is:\", focal_length)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using lens 1 as the sphere and the lens 2 as the cellphone lens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of Lens 1 units required is: -487.1794871794872\n",
+      "The distance between the combined lens system and Lens 2 is: 2.0080217288117717\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_lens_parameters(f1, f2, magnification):\n",
+    "    magnification = abs(magnification)  # Ensure magnification is positive\n",
+    "\n",
+    "    # Calculate the number of Lens 1 units required\n",
+    "    num_lens_1 = magnification * (f2 - f1) / (f1 * f2)\n",
+    "\n",
+    "    # Calculate the distance between the combined lens system and Lens 2\n",
+    "    d = f2 - (1 / ((1 / f1) + (num_lens_1 / f1)))\n",
+    "\n",
+    "    return num_lens_1, d\n",
+    "\n",
+    "# Example usage\n",
+    "f1 = float(input(\"Enter the focal length of Lens 1: \"))\n",
+    "f2 = float(input(\"Enter the focal length of Lens 2: \"))\n",
+    "magnification = float(input(\"Enter the desired magnification: \"))\n",
+    "\n",
+    "num_lens_1, d = calculate_lens_parameters(f1, f2, magnification)\n",
+    "print(\"The number of Lens 1 units required is:\", num_lens_1)\n",
+    "print(\"The distance between the combined lens system and Lens 2 is:\", d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_lens_distance(f1, f2, magnification):\n",
+    "\n",
+    "    #\n",
+    "\n",
+    "    # Calculate the distance between the lenses\n",
+    "    d = (f2 - f1) / (magnification - 1)\n",
+    "\n",
+    "    return d\n",
+    "\n",
+    "# Example usage\n",
+    "f1 = float(input(\"Enter the focal length of Lens 1: \"))\n",
+    "f2 = float(input(\"Enter the focal length of Lens 2: \"))\n",
+    "magnification = float(input(\"Enter the desired magnification: \"))\n",
+    "\n",
+    "distance = calculate_lens_distance(f1, f2, magnification)\n",
+    "print(\"The distance between the lenses is:\", distance)"
+   ]
   }
  ],
  "metadata": {
@@ -169,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
