Update on algorithm

--- a/LensesCalculation.ipynb
+++ b/LensesCalculation.ipynb
@@ -180,14 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The focal length of the spherical lens is: -0.7096774193548387\n"
+      "The focal length of the spherical lens is: -0.3942652329749104\n"
      ]
     }
    ],
@@ -216,18 +216,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The number of Lens 1 units required is: -487.1794871794872\n",
-      "The distance between the combined lens system and Lens 2 is: 2.0080217288117717\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def calculate_lens_parameters(f1, f2, magnification):\n",
     "    magnification = abs(magnification)  # Ensure magnification is positive\n",
@@ -251,27 +242,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The distance of the image is: -0.00019709854927463732\n",
+      "The number of lenses required is: -0.0005002501250625312\n"
+     ]
+    }
+   ],
    "source": [
-    "def calculate_lens_distance(f1, f2, magnification):\n",
+    "def calculate_image_distance(f, magnification):\n",
+    "    # Calculate the distance of the image using the lens formula\n",
+    "    image_distance = f / (1 - magnification)\n",
     "\n",
-    "    #\n",
+    "    return image_distance\n",
     "\n",
-    "    # Calculate the distance between the lenses\n",
-    "    d = (f2 - f1) / (magnification - 1)\n",
+    "def calculate_num_lenses(image_distance, f):\n",
+    "    # Calculate the number of lenses required based on the image distance and focal length\n",
+    "    num_lenses = image_distance / f\n",
     "\n",
-    "    return d\n",
+    "    return num_lenses\n",
     "\n",
     "# Example usage\n",
-    "f1 = float(input(\"Enter the focal length of Lens 1: \"))\n",
-    "f2 = float(input(\"Enter the focal length of Lens 2: \"))\n",
+    "f = float(input(\"Enter the focal length of the lens: \"))\n",
     "magnification = float(input(\"Enter the desired magnification: \"))\n",
     "\n",
-    "distance = calculate_lens_distance(f1, f2, magnification)\n",
-    "print(\"The distance between the lenses is:\", distance)"
+    "image_distance = calculate_image_distance(f, magnification)\n",
+    "num_lenses = calculate_num_lenses(image_distance, f)\n",
+    "\n",
+    "print(\"The distance of the image is:\", image_distance)\n",
+    "print(\"The number of lenses required is:\", num_lenses)"
    ]
   }
  ],
