.md part after paper scratch

--- a/LensesCalculation.ipynb
+++ b/LensesCalculation.ipynb
@@ -7,14 +7,15 @@
    "source": [
     "# Script to calculate microscope parameters\n",
     "This function can calculate, via user inputs, the following parameters:\n",
-    "* Distance microscope-cellphone and;\n",
-    "* Number of spheres.\n",
+    "* Distance objective-eyepiece and;\n",
+    "* Distance objective-object.\n",
     "\n",
-    "The user just need to input:\n",
+    "The user need to input:\n",
     "* Sphere radius;\n",
-    "* Distance object-microscope;\n",
-    "* Refraction idex of spheres and;\n",
-    "* Desired magnification."
+    "* Focusing distance of cellphone's camera;\n",
+    "* Refraction idex of spheres;\n",
+    "* Desired magnification and;\n",
+    "* Focal length of eyepiece lens."
    ]
   },
   {
