Actual spherical focal length

--- a/LensesCalculation.ipynb
+++ b/LensesCalculation.ipynb
@@ -22,25 +22,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing some libraries\n",
     "\n",
-    "import math "
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def miri_parameters(sphereRadius, refractionIndex, focusingDistance, focalLengthEyepiece, magnification):\n",
+    "def miri_parameters(sphereRadius, focusingDistance, focalLengthEyepiece, magnification):\n",
     "\n",
     "    # Here we calculate the distance object-eyepiece\n",
-    "    distanceEO = ((sphereRadius / (2 * (refractionIndex - 1)) - focusingDistance) / (focusingDistance - (sphereRadius / (2*(refractionIndex - 1)))))\n",
+    "    distanceEO = (((3*sphereRadius/2) - focusingDistance) / (focusingDistance - (3*sphereRadius/2)))\n",
     "\n",
     "    # Here we calculate the distance objective - object of objective lens\n",
     "    distanceOO = math.sqrt((abs(focalLengthEyepiece * (1 - focusingDistance))))\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -66,8 +66,8 @@
      "text": [
       "The distance eyepiece - object of eyepiece lens is:  -1.0\n",
       "The distance objective - object of objective lens is:  33.34666400106613\n",
-      "The distance objective - image of objective lens is:  -23.819045715047235\n",
-      "The tube size is:  -24.819045715047235\n"
+      "The distance objective - image of objective lens is:  -476.3809143009447\n",
+      "The tube size is:  -477.3809143009447\n"
      ]
     }
    ],
@@ -80,10 +80,10 @@
     "focalLengthEyepiece = float(input(\"Insert the focal length of you eyepiece lens\"))\n",
     "magnification = float(input(\"Insert the desired magnification\"))\n",
     "\n",
-    "print(\"The distance eyepiece - object of eyepiece lens is: \", miri_parameters(sphereRadius, refractionIndex, focusingDistance, focalLengthEyepiece, magnification)[0])\n",
-    "print(\"The distance objective - object of objective lens is: \", miri_parameters(sphereRadius, refractionIndex, focusingDistance, focalLengthEyepiece, magnification)[1])\n",
-    "print(\"The distance objective - image of objective lens is: \", miri_parameters(sphereRadius, refractionIndex, focusingDistance, focalLengthEyepiece, magnification)[2])\n",
-    "print(\"The tube size is: \", miri_parameters(sphereRadius, refractionIndex, focusingDistance, focalLengthEyepiece, magnification)[3])"
+    "print(\"The distance eyepiece - object of eyepiece lens is: \", miri_parameters(sphereRadius, focusingDistance, focalLengthEyepiece, magnification)[0])\n",
+    "print(\"The distance objective - object of objective lens is: \", miri_parameters(sphereRadius, focusingDistance, focalLengthEyepiece, magnification)[1])\n",
+    "print(\"The distance objective - image of objective lens is: \", miri_parameters(sphereRadius, focusingDistance, focalLengthEyepiece, magnification)[2])\n",
+    "print(\"The tube size is: \", miri_parameters(sphereRadius, refractionIndex, focusingDistance, magnification)[3])"
    ]
   },
   {
@@ -112,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
