--- a/LensesCalculation.ipynb
+++ b/LensesCalculation.ipynb
@@ -218,7 +218,7 @@
     "print(df)\n",
     "\n",
     "# Saving the data frame as a CSV\n",
-    "df.to_csv('MiriParameters.csv')"
+    "df.to_csv('./SupplementaryDocuments/MiriParameters.csv')"
    ]
   }
  ],
